OSSM/1_34/must-gather.local.2392184673243315730/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-88edd13801b2ba7aa4bc7c344e18992e2ebd100cc49e959b315bb7e8c8d20298/namespaces/serving-tests/networking.istio.io/gateways/1986073809-3797421420.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
    maistra.io/manageRoute: "false"
  creationTimestamp: "2025-01-09T15:00:43Z"
  generation: 1
  labels:
    networking.internal.knative.dev/ingress: stavros.com.apps.ci-ln-6bt60xt-76ef8.aws-2.ci.openshift.org
  managedFields:
  - apiVersion: networking.istio.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:maistra.io/manageRoute: {}
        f:labels:
          .: {}
          f:networking.internal.knative.dev/ingress: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"e7650249-4d54-4d4e-8d66-d58bbcf64844"}: {}
      f:spec:
        .: {}
        f:selector:
          .: {}
          f:app: {}
          f:istio: {}
          f:knative: {}
        f:servers: {}
    manager: controller
    operation: Update
    time: "2025-01-09T15:00:43Z"
  name: 1986073809-3797421420
  namespace: serving-tests
  ownerReferences:
  - apiVersion: networking.internal.knative.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Ingress
    name: stavros.com.apps.ci-ln-6bt60xt-76ef8.aws-2.ci.openshift.org
    uid: e7650249-4d54-4d4e-8d66-d58bbcf64844
  resourceVersion: "54303"
  uid: addac577-418f-4720-8877-be722d3fdaf0
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
    knative: ingressgateway
  servers:
  - hosts:
    - stavros.com.apps.ci-ln-6bt60xt-76ef8.aws-2.ci.openshift.org
    port:
      name: serving-tests/1986073809:0
      number: 443
      protocol: HTTPS
    tls:
      credentialName: stavros.com.apps.ci-ln-6bt60xt-76ef8.aws-2.ci.openshift.org-009b21ba-ff39-47d6-b043-f98b7b19ef16
      minProtocolVersion: TLSV1_2
      mode: SIMPLE
      privateKey: tls.key
      serverCertificate: tls.crt
  - hosts:
    - stavros.com.apps.ci-ln-6bt60xt-76ef8.aws-2.ci.openshift.org
    port:
      name: http-server
      number: 80
      protocol: HTTP
